WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267563
RemoteImageBufferSet is leaked if the RemoteRenderingBackend is destroyed without removing them manually
https://bugs.webkit.org/show_bug.cgi?id=267563
Summary
RemoteImageBufferSet is leaked if the RemoteRenderingBackend is destroyed wit...
Matt Woodrow
Reported
2024-01-15 19:12:13 PST
There's a reference cycle between m_remoteImageBufferSets on the RemoteRenderingBackend, and m_backend on RemoteImageBufferSet. Normally we remove them from the hash map manually, but if we shut down the rendering backend entirely, any remaining sets (and the rendering backend) are leaked. <
rdar://120057571
>
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-01-15 19:13:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22805
EWS
Comment 2
2024-01-15 22:31:33 PST
Committed
273054@main
(3eabc15ebb80): <
https://commits.webkit.org/273054@main
> Reviewed commits have been landed. Closing PR #22805 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug