RemoteImageBufferSet is leaked if the RemoteRenderingBackend is destroyed without removing them manually. https://bugs.webkit.org/show_bug.cgi?id=267563 rdar://120057571>

Reviewed by Mike Wyrzykowski.

There's a reference cycle between m_remoteImageBufferSets on the
RemoteRenderingBackend, and m_backend on RemoteImageBufferSet.

Normally we remove them from the hash map manually, but if we shut
down the rendering backend entirely, any remaining sets (and the
rendering backend) are leaked.

* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::workQueueUninitialize):

Canonical link: https://commits.webkit.org/273054@main